--- a/.gitignore
+++ b/.gitignore
@@ -147,3 +147,4 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.gitignore.io/api/java,windows,eclipse
+Servers/Tomcat v8.5 Server at localhost-config/context.xml
