--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+# Directories #
+/build/
+/bin/
+target/
+
+# OS Files #
+.DS_Store
+  
+
 # Compiled class file
 *.class
 
@@ -27,6 +36,8 @@ hs_err_pid*
 # Edit at https://www.gitignore.io/?templates=java,windows,eclipse
 
 ### Eclipse ###
+.classpath
+.project
 .metadata
 bin/
 tmp/
@@ -147,4 +158,9 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.gitignore.io/api/java,windows,eclipse
+Servers/Tomcat v8.5 Server at localhost-config/web.xml
+Servers/Tomcat v8.5 Server at localhost-config/tomcat-users.xml
+Servers/Tomcat v8.5 Server at localhost-config/server.xml
 Servers/Tomcat v8.5 Server at localhost-config/context.xml
+Servers/Tomcat v8.5 Server at localhost-config/catalina.properties
+Servers/Tomcat v8.5 Server at localhost-config/catalina.policy
